# unused-deps-specs2

./: BUILD.bazel  README.md  WORKSPACE
src/test/scala/com/comp/b/: BUILD.bazel  Matchers.scala  Person.scala
